added transfer feature update readme
